--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
   auth:
     build: ./services/auth
     image: felixbreuer/instapy-auth:latest
-    command: ['npm', 'run', 'dev']
+    command: sh -c "npm install && npm run dev"
     restart: unless-stopped
     volumes:
       - ./services/auth:/usr/instapy
@@ -32,7 +32,7 @@ services:
   socket:
     build: ./services/socket
     image: felixbreuer/instapy-socket:latest
-    command: ['npm', 'run', 'dev']
+    command: sh -c "npm install && npm run dev"
     restart: unless-stopped
     ports:
       - 4005:80
@@ -52,3 +52,4 @@ services:
   instapy:
     build: ./services/instapy
     image: felixbreuer/instapy-client:latest
+
