--- a/services/actions/Dockerfile
+++ b/services/actions/Dockerfile
@@ -4,7 +4,6 @@ WORKDIR /usr/instapy
 
 COPY . .
 
-RUN pip3 install wheel;
-RUN pip3 install -r requirements.txt;
+RUN pip3 install wheel && pip3 install -r requirements.txt
 
 CMD ["python3", "-u", "main.py"]
