--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
 		"preact-compat": "^3.18.5",
 		"preact-markup": "^1.6.0",
 		"react-ga": "^2.5.7",
-		"react-router-dom": "^4.3.1",
 		"react-tagsinput": "^3.19.0",
 		"regenerator-runtime": "^0.13.3",
 		"slugify": "^1.3.4",
@@ -43,21 +42,31 @@
 		"@babel/plugin-syntax-dynamic-import": "^7.2.0",
 		"@babel/plugin-transform-react-jsx": "^7.3.0",
 		"@babel/preset-env": "^7.4.5",
+		"@material-ui/core": "^3.9.3",
+		"@material-ui/icons": "^3.0.2",
 		"@types/core-js": "^2.5.3",
 		"autoprefixer": "^9.6.0",
 		"babel-eslint": "^10.0.1",
 		"babel-loader": "^8.0.6",
+		"chart.js": "^2.8.0",
 		"clean-webpack-plugin": "^1.0.1",
+		"concurrently": "^4.1.0",
 		"css-loader": "^2.1.1",
 		"dotenv-webpack": "^1.7.0",
 		"eslint": "^5.16.0",
 		"eslint-plugin-react": "^7.13.0",
 		"file-loader": "^4.1.0",
 		"html-webpack-plugin": "^3.2.0",
+		"moment": "^2.24.0",
 		"node-sass": "^4.12.0",
 		"postcss-loader": "^3.0.0",
 		"purgecss-webpack-plugin": "^1.5.0",
+		"react": "^16.8.6",
+		"react-chartkick": "^0.3.0",
+		"react-router-dom": "^4.3.1",
+		"react-spinners": "^0.4.8",
 		"sass-loader": "^7.1.0",
+		"socket.io": "^2.2.0",
 		"style-loader": "^0.23.1",
 		"webpack": "^4.32.2",
 		"webpack-cli": "^3.3.2",
