--- a/package.json
+++ b/package.json
@@ -27,12 +27,15 @@
 		"jwt-decode": "^2.2.0",
 		"linkstate": "^1.1.1",
 		"preact": "^8.4.2",
+		"preact-chartjs-2": "^1.0.3",
 		"preact-compat": "^3.18.5",
+		"preact-loading-skeleton": "^1.2.2",
 		"preact-markup": "^1.6.0",
 		"react-ga": "^2.5.7",
 		"react-tagsinput": "^3.19.0",
 		"regenerator-runtime": "^0.13.3",
 		"slugify": "^1.3.4",
+		"styled-loaders": "^0.3.0",
 		"unistore": "^3.4.1"
 	},
 	"devDependencies": {
@@ -42,12 +45,11 @@
 		"@babel/plugin-syntax-dynamic-import": "^7.2.0",
 		"@babel/plugin-transform-react-jsx": "^7.3.0",
 		"@babel/preset-env": "^7.4.5",
-		"@material-ui/core": "^3.9.3",
 		"@types/core-js": "^2.5.3",
 		"autoprefixer": "^9.6.0",
 		"babel-eslint": "^10.0.1",
 		"babel-loader": "^8.0.6",
-		"chart.js": "^2.8.0",
+		"chart.js": "^2.9.4",
 		"clean-webpack-plugin": "^1.0.1",
 		"css-loader": "^2.1.1",
 		"dotenv-webpack": "^1.7.0",
@@ -58,9 +60,8 @@
 		"node-sass": "^4.12.0",
 		"postcss-loader": "^3.0.0",
 		"purgecss-webpack-plugin": "^1.5.0",
-		"react-chartkick": "^0.3.0",
+		"react-chartkick": "^0.5.1",
 		"react-router-dom": "^4.3.1",
-		"react-spinners": "^0.4.8",
 		"sass-loader": "^7.1.0",
 		"style-loader": "^0.23.1",
 		"webpack": "^4.32.2",
