--- a/.github/workflows/frontend-test.yaml
+++ b/.github/workflows/frontend-test.yaml
@@ -18,6 +18,6 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       - run: npm config set python /usr/bin/python2
-      - run: npm install
+      - run: npm install --legacy-peer-deps
       - run: npm run test
       - run: npm run build
